<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_normal"
            tools:context=".RegistrationActivity">
            <ImageButton
                android:id="@+id/btn_back_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_normal"
                android:textColor="@color/colorBlue"
                android:text="@string/tv_welcome"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_minium"
                android:textColor="@color/colorBlue"
                android:text="@string/tv_information"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_account_circle_black_24dp"/>
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/et_name"/>
            <EditText
                android:id="@+id/et_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/et_gender"/>
            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/et_dob"/>
            <EditText
                android:id="@+id/et_usertype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/et_usertype"/>
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/et_email"/>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:passwordToggleEnabled="true">
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_remove_red_eye_black_24dp"
        android:inputType="textPassword"
        android:hint="@string/et_password"/>
</com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/et_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/et_occupation"/>
            <TextView
                android:id="@+id/tv_span_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:layout_marginTop="@dimen/margin_min"
                android:layout_marginLeft="@dimen/margin_minmax"
                android:text="@string/tv_signin_span" />

            <Button
                android:id="@+id/btn_countinue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_continue"
                android:layout_marginTop="@dimen/margin_min"
                android:background="@drawable/border_blue"
                android:textColor="@color/colorBlue"/>




        </LinearLayout>
    </ScrollView>

</LinearLayout>