<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton
        android:id="@+id/btn_back_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:src="@drawable/ic_keyboard_arrow_left_black_24dp"/>
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/font_size_minium"
    android:textColor="@color/colorBlue"
    android:text="@string/tv_otp_verification"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlue"
        android:text="@string/tv_sent_your_number_via_sms"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:ems="4"
            android:inputType="number"/>
        <EditText
            android:id="@+id/et_two"
            android:layout_width="wrap_content"
            android:ems="4"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:inputType="number"/>

        <EditText
            android:id="@+id/et_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:maxLength="1"
            android:inputType="number"/>

        <EditText
            android:id="@+id/et_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:maxLength="1"
            android:inputType="number"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_normal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_otp_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_resend"
            android:background="@drawable/border_blue"
            android:textColor="@color/colorBlue"/>
        <Button
            android:id="@+id/btn_otp_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_otp_submit"
            android:layout_marginStart="@dimen/margin_normal"
            android:background="@color/colorBlue"
            android:textColor="@color/colorWhite"/>
</LinearLayout>


</LinearLayout>